<resources>
    <string name="app_name">LinkHome</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="remember_me">Remember me</string>
    <string name="confirm_password">confirm Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="successfully_logged_in">Successfully Logged in</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sort_low_to_high">Sort Low to High</string>
    <string name="sort_high_to_low">Sort High to Low</string>
    <string name="filter">filter</string>
    <string name="search">Search</string>
    <string name="confirm">Confirm</string>
    <string name="email">Email</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="cvv">CVV</string>
    <string name="mm_yy">MM/YY</string>
    <string name="card_number">Card number</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="continue_without_logging_in">Continue Without Logging In</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="payment_successful_text">Payment Successful</string>
    <string name="wishlist">Wishlist</string>
</resources>