<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_bookmarks"
            android:title="Wishlist" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_login"
                android:title="@string/login" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>