<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/Filter"
        android:title="@string/filter"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/Sort1"
                android:icon="@drawable/ic_baseline_arrow_drop_up_24"
                android:orderInCategory="100"
                android:title="@string/sort_low_to_high" />
            <item
                android:id="@+id/Sort2"
                android:icon="@drawable/ic_baseline_arrow_drop_down_24"
                android:orderInCategory="100"
                android:title="@string/sort_high_to_low" />
        </menu>

    </item>


</menu>