<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/email_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/password"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_address"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8"
        android:layout_marginTop="15dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:hint="@string/confirmPassword"
        android:background="@drawable/edit_text_bg"
        android:paddingStart="20dp"
        android:layout_marginTop="15dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@id/confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.392"
        app:layout_constraintWidth_percent=".7" />

</androidx.constraintlayout.widget.ConstraintLayout>