<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage.Paypal">

    <EditText
        android:id="@+id/paymentCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:ems="10"
        android:hint="@string/card_number"
        android:inputType="number"
        android:maxLength="12"
        android:maxLines="1"
        android:text=""
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/paymentDates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mm_yy"
        android:inputType="date"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentCardNumber"
        app:layout_constraintVertical_bias="0.07" />

    <EditText
        android:id="@+id/paymentCVV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cvv"
        android:inputType="numberPassword"
        android:maxLength="3"
        android:maxLines="1"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentCardNumber"
        app:layout_constraintVertical_bias="0.246" />

    <EditText
        android:id="@+id/paymentHolderName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/card_holder_name"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentDates"
        app:layout_constraintVertical_bias="0.284" />

    <EditText
        android:id="@+id/paymentEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentDates"
        app:layout_constraintVertical_bias="0.501" />

    <Button
        android:id="@+id/paymentConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentEmail"
        app:layout_constraintVertical_bias="0.296" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="31dp"
        android:layout_height="24dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="@+id/paymentCardNumber"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_credit_card_24" />

    <TextView
        android:id="@+id/et_information"
        android:layout_width="358dp"
        android:layout_height="55dp"
        android:layout_marginTop="116dp"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Add your payment details:"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/paymentCardNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/et_welcome_mastercard"
        android:layout_width="408dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Welcome to Paypal Payemnt Page"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>