<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homePage.payment.Mastercard">


    <EditText
        android:id="@+id/payment_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:ems="10"
        android:hint="@string/enter_card_number"
        android:inputType="number"
        android:maxLength="16"
        android:maxLines="1"
        android:text=""
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/payment_dates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mm_yy"
        android:inputType="date"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_card_number"
        app:layout_constraintVertical_bias="0.07" />

    <EditText
        android:id="@+id/payment_cvv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cvv"
        android:inputType="numberPassword"
        android:maxLength="3"
        android:maxLines="1"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_card_number"
        app:layout_constraintVertical_bias="0.246" />

    <EditText
        android:id="@+id/payment_holder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/card_holder_name"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_dates"
        app:layout_constraintVertical_bias="0.284" />

    <EditText
        android:id="@+id/payment_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_dates"
        app:layout_constraintVertical_bias="0.501" />

    <Button
        android:id="@+id/payment_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_email"
        app:layout_constraintVertical_bias="0.296" />

    <ImageView
        android:id="@+id/card_image"
        android:layout_width="31dp"
        android:layout_height="24dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="@+id/payment_card_number"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_credit_card_24"
        android:contentDescription="Card image" />

    <TextView
        android:id="@+id/payment_details_title"
        android:layout_width="302dp"
        android:layout_height="47dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="116dp"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Add your payment details:"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/payment_card_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/payment_title"
        android:layout_width="379dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="9dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Welcome to Mastercard Payment"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mastercard_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mastercard_image"
        android:layout_width="348dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="332dp"
        android:layout_marginRight="332dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/payment_details_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_title"
        app:srcCompat="@drawable/mastercard" />


    <TextView
        android:id="@+id/alert_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/payment_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_email" />


</androidx.constraintlayout.widget.ConstraintLayout>